--- a/themes/hugo-creative-portfolio-theme/layouts/index.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/index.html
@@ -1,7 +1,10 @@
-<head> 
+<head>
     {{ range .Site.Params.navlinks }}
     {{ if .home }}
     <meta http-equiv="refresh" content="0; URL={{ .url | absURL }}" />
     {{ end }}
     {{ end }}
+    <script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
   </head>
